deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-deploy
  template:
    metadata:
      labels:
        app: ghost-deploy
    spec:
      containers:
      - name: ghost-deploy
        image: ghost
        resources: {}  # No resource limit
        ports:
        - containerPort: 2368
