service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  selector:
    app: ghost-deploy
  ports:
  - port: 2368
    targetPort: 2368
 # type: LoadBalancer
