ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-mysql-aks-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  ingressClassName: nginx
  rules:
    - host: www.example.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-mysql-aks
                port:
                  number: 8080
